*** When upgrading, don't forget to: "cd bin ; ./checksetup.pl" ***

Version 1.6.1

* Modified to use Net::SMTP to allow Codestriker to run under Windows,
  and to not hardwire the mail sending program to "sendmail".

* Allow for the list/search topics and topic deletion to possibly be
  disabled.  This is required for a codestriker server which is
  handling "anonymous" reviews on a public site.

* Added a "repository" attribute associated with a topic.  This is the
  source code repository associated with the review, and by default is
  set to the value of $default_repository in codestriker.conf.  This
  can be an absolute path, which indicates the CVSROOT of a local cvs
  repository, or a cvsweb or viewcvs URL, followed by a space,
  followed by the CVSROOT.  Other repository types, such as pserver
  CVS, BitKeeper, or Subzero can be added in the future.

  For example, when reviewing a codestriker change, the repository
  would be set as:

  http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi /cvsroot

  For a local repository, it could be just:

  /usr/local/cvsroot

* Added a configuration flag to indicate that email addresses should
  be displayed in an "anti spam" form.  Eg:

  sits@users.sf.net -> sits@use...

  This is required for a public deployment of Codestriker.

* Created header and trailer templates which appear on every screen,
  to assist in customising a site's look.

* The submit comment and submit topic screens where changed to use
  templates.

* Added a lot of on-line help for the create topic screen, to explain
  what all the input form elements mean.  Also added help for the
  update topic status button in the view topic screen.

* Changed the look-n-feel slightly for the view topic and edit topic
  screens.

Version 1.6.0

* Modified to use the "Template Toolkit" so that the HTML pages can be
  easily customised without modifying any perl code.  The templates
  live in template/en/default, where they can be modified in-place.
