@@ -45,7 +45,8 @@ $codestriker_css = "";
 $bugtracker = "";
 #$bugtracker = "http://localhost.localdomain/show_bug.cgi?id=";
 
-# Set this to the path of the default repository.
+# Set this to the path of the default repository that code reviews work off.
+# When a topic is created, this value can be overridden.
 $default_repository = "";
 #$default_repository = "http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi /cvsroot";
 #$default_repository = "/home/sits/cvs";
@@ -80,6 +81,12 @@ $allow_delete = 1;
 # Indicate if topics can be listed/searched.  Turning this to false can be
 # useful for "anonymous" installations of codestiker.
 $allow_searchlist = 1;
+
+# Indicate if the repository attribute can be set to a topic.  If this is
+# disabled, it won't be possible to view the contents of a file before the
+# proposed change and/or after.  On some servers (such as sourceforge), the
+# firewall doesn't allow for CGI scripts to make remote connections.
+$allow_repositories = 1;
 
 # If true, don't display any email addresses in their true form, to beat
 # SPAM engines.
