@@ -45,9 +45,19 @@
 	    Each topic is given a random unique id, and the
 	    search/list topics functionality in this deployment is
 	    disabled, to support public use and to give some form of
-	    anonymity.  So go ahead and give it a go!  Feedback is
-	    most welcome.  Contact details are at the bottom of this
-	    page.
+	    anonymity.  Unfortunately, the ability to view a file
+	    before and/or after a proposed change is not enabled,
+	    since HTTP connections to remote CVS repositories can't be
+	    established due to firewall settings on the SourceForge
+	    servers.  The file viewing functionality is described in
+	    more detail below.
+
+	    <p>	  
+	    Bear this in mind, but in any case, go ahead and give it a go!
+
+	    <p>
+	    Feedback is most welcome.  Contact details are at the
+	    bottom of this page.
 	</p>
 
 	<h2>Features</h2>
