@@ -20,7 +20,8 @@ use vars qw ( $mailhost $use_compression $gzip $cvs $bugtracker
 	      $NORMAL_MODE $COLOURED_MODE $COLOURED_MONO_MODE $topic_states
 	      $bug_db $bug_db_host $bug_db_name $bug_db_password $bug_db_user
 	      $lxr_db $lxr_user $lxr_passwd $lxr_idlookup_base_url
-	      $allow_delete $allow_searchlist $antispam_email
+	      $allow_delete $allow_searchlist $allow_repositories
+              $antispam_email
 	      );
 
 # Version of Codestriker.
