@@ -35,7 +35,6 @@ sub retrieve ($$$\$) {
 	"/${filename}?rev=${revision}&content-type=text/plain";
     my $response = $ua->get($request);
     my $content = $response->content;
-
     # Store the content lines.
     my @content_lines = split /\n/, $content;
     for (my $i = 0; $i <= $#content_lines; $i++) {
